syntax = "proto3";

package gen;

option go_package = "./gen";

service AuthService {
	rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
	rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
	rpc GenerateToken (GenerateTokensRequest) returns (GenerateTokensResponse);
}

message ValidateTokenRequest {
	string token = 1;
}

message ValidateTokenResponse {
	bool valid = 1;
	string user_id = 2;
}

message RefreshTokenRequest {
	string refresh_token = 1;
}

message RefreshTokenResponse {
	TokenPair token_pair = 1;
}

message GenerateTokensRequest {
	string user_id = 1;
}

message GenerateTokensResponse {
	TokenPair token_pair = 1;
}

message TokenPair {
	string access_token = 1;
	string refresh_token = 2;
}